<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".Activities.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_categorias"
        android:textSize="30sp"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"/>

    <Button
        android:id="@+id/btn_parquesnaturales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/parques_naturales"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"/>

    <Button
        android:id="@+id/btn_parquesartificiales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/parques_artificiales"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"/>

    <Button
        android:id="@+id/btn_centroscomerciales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/centros_comerciales"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"/>

    <Button
        android:id="@+id/btn_plazas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plazas"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"/>

    <Button
        android:id="@+id/btn_restaurantes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/restaurantes"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"/>

    <Button
        android:id="@+id/btn_realidadaumentada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/realidad_aumentada"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"/>
</LinearLayout>
